--- a/src/main/res/layout/image.xml
+++ b/src/main/res/layout/image.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zzt.library.BezelImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhoumushui.zygoteelastichsv.view.BezelImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/user_head_img"
     android:layout_width="340px"
